Fix planner cart overflow

--- a/src/styles/components/planner/PlannerCart.module.scss
+++ b/src/styles/components/planner/PlannerCart.module.scss
@@ -2,7 +2,6 @@
   max-height: 100%;
   height: fit-content;
   padding-top: 8px;
-  overflow-y: scroll;
   &::-webkit-scrollbar {
     display: none;
   }
